--- a/meu_portfolio/src/components/ProjectGrid/ProjectGrid.css
+++ b/meu_portfolio/src/components/ProjectGrid/ProjectGrid.css
@@ -5,7 +5,6 @@
     max-width: calc(1280px + 2rem);
     padding: 0px 1rem;
     width: 100%;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 2rem;
-    
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    gap: 2rem;   
 }
