--- a/meu_portfolio/src/queries.css
+++ b/meu_portfolio/src/queries.css
@@ -9,7 +9,15 @@
 
 }
 
-@media screen and (max-width:1200px) {
+@media screen and (min-width: 1320px) {
+
+    .project-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    
+}
+
+@media screen and (max-width: 1200px) {
     .profile-inner{
         flex-direction: column-reverse;
         gap: 0rem;
