--- a/meu_portfolio/src/components/Skills/Skills.css
+++ b/meu_portfolio/src/components/Skills/Skills.css
@@ -19,6 +19,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 1.5rem;
 }
 
 .skills-content span, .projects-introduction-content span{
@@ -29,7 +30,7 @@
     border-radius: 50%;
 }
 
-.skills-content h2, .projects-introduction-content h2{
+.about-skills, .projects-introduction-content h2{
     font-weight: bolder;
     font-style: oblique;
     padding: 1rem;
